Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjBooleanField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        boolean var = true
        return var
    end
end